@@ -1,3 +1,11 @@
+Thu Apr 17 17:08:17 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * MDE/GME/paradigms/PICML/modelin/Picmlin_App.cpp:
+        
+          The XML parser and dumper are not coupled with the GME 
+          project anymore. Updated the implementation to reflect
+          this design.
+
 Thu Apr 17 17:06:07 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MDE/GME/paradigms/PICML/be/CAPI:
@@ -8,7 +16,7 @@ Thu Apr 17 17:06:07 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
         * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Manager_Factory.h:
         * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Manager_Factory.cpp:
         * MDE/GME/paradigms/PICML/be/CAPI/CAPI_export.h:
-        
+
           Partial implemenation of the CAPI backend generator for
           CUTS.
 
